# tap-mercadopago

./: pyproject.toml
